noodling on an index and single project pages

--- a/src/pages/all-about-carbon/projects.mdx
+++ b/src/pages/all-about-carbon/projects.mdx
@@ -2,43 +2,47 @@
 title: Projects
 description:
   Projects are scoped work initiatives formed by groups of subject matter
-  experts. They may be permanent initiatives, or formed for specific projects
-  with a committed scope of work.
+  experts.
 ---
 
 <PageDescription>
 
 Projects are scoped work initiatives formed by groups of subject matter experts.
+They can be formed from scratch, or might comprise an existing guild or group.
+They may be permanent initiatives, or formed for work with a clear end point.
 
 </PageDescription>
 
-## What is a project?
+## Foundational projects
 
-Projects are scoped work initiatives formed by groups of subject matter experts.
-Projects may be formed from scratch, or comprise an existing guild or group.
-They may be permanent initiatives, or formed for specific projects with a
-committed scope of work.
+- Delivers guidance, assets, services used by all projects
 
-Proposals for the formation of projects can be proposed by anyone and are
-submitted to the steering committee for approval.
+## Component projects
 
-## Developer facilitation
+- Implements guidance and specifications for a given platform(s) (e.g. web,
+  desktop, iOS, Android) in a particular tool, library, or framework along with
+  applicable documentation
+- Makes the common guidance and specifications usable for designers and
+  developers in their tool, library, or framework of choice
+- Match the behavior, interaction, visuals, etc. of the canonical component
+  projects
 
-### Responsibilities
+## Product projects
 
-- Highlight technical challenges and obstacles to adoption, and recommended
-  tooling and solutions.
-- Help ensure technical alignment of components and patterns with the system as
-  a whole.
-- Identify and encourage high quality project maintainers and committers.
+- Extends (but is not divergent or in conflict with) guidance and assets from
+  foundational and component projects for use among a product or collection of
+  products
+- Assets published by product projects may be used by other product projects
+  (horizontal sharing is encouraged)
+- Often includes tooling and implementations to make delivering cohesive work
+  faster and simpler for product teams
 
-Members to be confirmed.
+## Cross-product projects
 
-## Data visualization
+- Guidance, components, user journeys, etc. where it's advantageous to abstract
+  away from product projects (e.g. project members represent many unrelated
+  products)
 
-### Responsibilities
+## Project list
 
-- Prioritize chart and data visualization types for design attention.
-- Support teams in using the best chart implementations for their product needs.
-
-Members to be confirmed.
+- [Carbon Data Visualization](projects/carbon-data-viz-project)
