docs: medium article for home page and news

--- a/src/pages/whats-happening/news-and-articles/index.mdx
+++ b/src/pages/whats-happening/news-and-articles/index.mdx
@@ -21,6 +21,18 @@ about design systems.
 
 <Row>
 <Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    title="Sharing components across teams"
+    author="Anna Gonzales"
+    date="September 23, 2020"
+    href="https://medium.com/carbondesign/sharing-components-across-teams-b2335681c4aa "
+    >
+
+![Component index](/images/component_index.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
 
 <ArticleCard
     title="Carbon’s new information architecture"
