--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -109,6 +109,19 @@ building websites and user interfaces.
 
 <Row>
 <Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    color="dark"
+    title="Sharing components across teams"
+    author="Anna Gonzales"
+    date="September 23, 2020"
+    href="https://medium.com/carbondesign/sharing-components-across-teams-b2335681c4aa "
+    >
+
+![Component index](./homepage/images/component_index.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
 
 <ArticleCard
     color="dark"
@@ -132,19 +145,6 @@ building websites and user interfaces.
     >
 
 ![New ux patterns announcement](whats-happening/news-and-articles/images/patterns_announcement.png)
-
-</ArticleCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterMdLeft>
-<ArticleCard
-    color="dark"
-    title="Adobe XD Carbon starter kit announced at Max"
-    author="Ashley Still"
-    date="November 4, 2019"
-    href="https://theblog.adobe.com/adobe-and-ibm-ix-extend-partnership-to-help-enterprises-design-powerful-and-consistent-customer-experiences/"
-    >
-
-![Adobe and IBM partnership](./homepage/images/xd_kit_img.jpg)
 
 </ArticleCard>
 </Column>
