docs: leadership team updates

--- a/src/pages/all-about-carbon/leadership.mdx
+++ b/src/pages/all-about-carbon/leadership.mdx
@@ -85,7 +85,7 @@ practitioners to ensure Carbon stays true to the community we're serving.
 ![Jeannie Servaas headshot](/images/team/servaas_jean.png)
 
 </Profile>
-<Profile name="Wonil Suh" title="To be confirmed">
+<Profile name="Wonil Suh" title="IBM Design Principal, Digital Growth and Commerce">
 
 ![Wonil Suh headshot](/images/team/suh_wonil.png)
 
@@ -135,7 +135,7 @@ units from the Carbon Design System.
 ![Arin Bhowmick headshot](/images/team/bhowmick_arin.png)
 
 </Profile>
-<Profile name="Sarah Brooks" title="To be confirmed">
+<Profile name="Sarah Brooks" title="IBM Distinguished Designer, Design Program Office">
 
 ![Sarah Brooks headshot](/images/team/brooks_sarah.png)
 
@@ -155,7 +155,7 @@ units from the Carbon Design System.
 ![Craig Moser headshot](/images/team/moser_craig.png)
 
 </Profile>
-<Profile name="Doug Powell" title="To be confirmed">
+<Profile name="Doug Powell" title="Vice President, Designer Practices & Community, IBM Distinguished Designer">
 
 ![Doug Powell headshot](/images/team/powell_doug.png)
 
