--- a/src/pages/components/form/usage.mdx
+++ b/src/pages/components/form/usage.mdx
@@ -287,7 +287,7 @@ characters."_
 </Column>
 </Row>
 
-### Optional vs. required fields
+### Optional versus required fields
 
 All fields in a form are assumed required, with optional fields being tagged as
 so. An instruction should precede the form stating either "All fields are required" or "All fields are required unless marked optional"
