--- a/src/pages/all-about-carbon/leadership.mdx
+++ b/src/pages/all-about-carbon/leadership.mdx
@@ -1,5 +1,5 @@
 ---
-title: Leadership
+title: Partners
 description:
   Carbon is not just one team. To sustain productive contribution and maintain a
   clear direction for Carbon as a whole, various groups works together to
@@ -22,19 +22,21 @@ practitioners to ensure Carbon stays true to the community we're serving.
 
 ### Responsibilities
 
-- Improve design strategy, quality, and consistency within the design system.
-- Promote and support usage of and contribution to the Carbon Design System
+- Improve design strategy, quality, and consistency within the design system to
+  ensure excellence.
+- Promote and support usage of, and contribution to, the Carbon Design System
   within their organizations.
 - Identify and align components/patterns/content that are multiproduct or
-  universal, deciding on consolidation when necessary.
-- Assess and vote to approve or deny community proposals (for example, if a
-  particular PAL might warrant the "Carbon for [x]" title, and if individuals or
-  teams can be given _committer_ rights to all or part of the Carbon codebase).
-- Approve the creation of projects, including the scope of committed work and
-  recommend members who can contribute.
+  universal.
+- Ensure consistent design standards across different implementations of Carbon,
+  for example a button in Carbon React looks the same as a button in Carbon
+  Angular.
+- Help project teams refine their scope of work. Highlight projects of
+  particularly high potential business value. Help projects add collaborators
+  and find the resources they need.
 - Assist with standardizing information and tooling to support sharing across
   teams and business units.
-- Provide a quarterly update to the Board of Directors.
+- Provide a quarterly update to the advisory board.
 
 ### Members
 
@@ -97,21 +99,21 @@ practitioners to ensure Carbon stays true to the community we're serving.
 </Profile>
 </Row>
 
-## Board of directors
+## Advisory board
 
-The Carbon board of directors is comprised of executives across the company who
+The Carbon advisory board is comprised of executives across the company who
 advise on the direction of Carbon and ensure top level buy-in and resource
 allocation to support Carbon's work.
 
 ### Responsibilities
 
-- Hold the steering committee, and Carbon as a whole, accountable for delivery
-  of design excellence, standards, guidance and business impact.
-- Provide the steering committee feedback on business needs, to facilitate a
-  Carbon roadmap that meets those needs.
 - Champion Carbon adoption and Carbon standards within their organization.
 - Where possible, commit to engaging design or development resources from within
   their organization to help accomplish the Carbon roadmap.
+- Hold the steering committee, and Carbon as a whole, accountable for delivery
+  of design standards, guidance, and excellence with business impact.
+- Provide the steering committee with feedback on business needs, to facilitate
+  a Carbon roadmap that meets those needs.
 
 The board is supported by the steering committee, whose role is to provide
 oversight and direction for Carbon and its community, and related projects.
@@ -160,7 +162,7 @@ units from the Carbon Design System.
 ![Doug Powell headshot](/images/team/powell_doug.png)
 
 </Profile>
-<Profile name="Nigel Prentice" title="To be confirmed">
+<Profile name="Nigel Prentice" title="Design Director, Digital Growth and Commerce">
 
 ![Nigel Prentice headshot](/images/team/prentice_nigel.png)
 
