--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -1,5 +1,5 @@
 ---
-title: The team
+title: The Carbon team
 description:
   Carbon is funded and built by IBM. That means we build for the company’s
   business needs. Carbon is also an open source community-driven project. It is
@@ -14,13 +14,13 @@ available for anyone to use and everyone is encouraged to contribute.
 
 </PageDescription>
 
-## The core team
+## Providing support
 
-Carbon is maintained by a dedicated team of designers, developers, and writers
-working closely to support teams across the business to be productive and
-successful in designing digital experiences and products. The team is primarily
-based in the Austin, Texas IBM Design Studio. Right now though, everyone is
-staying safe and working from home.
+Carbon supports its users with a dedicated team of designers, developers, and
+writers working closely to support teams across the business to be productive
+and successful in designing digital experiences and products. The team is
+primarily based in the Austin, Texas IBM Design Studio. Right now though,
+everyone is staying safe and working from home.
 
 <Row>
 
