chore(component-index): update index ai app links (#1850)
* chore(component-index): update index ai app links

* chore(component-index): update index ai app links - fixed merge conflicts

* update link

* chore(component-index): update index ai app links - actually deleted files

Co-authored-by: andrea.cardonaibm.com <andrea.cardonaibm.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -85,7 +85,10 @@ requirements, and determine next steps on requested components or functionality.
   <span>First Thursdays, 9:00am–10:00am Central</span>
 </h2>
 
-_For IBMers only:_ A monthly meeting for teams building on top of Carbon to discuss best practices, identify areas of reuse, and bring up things the Carbon team can do to make their jobs easier. This group helps out with Carbon's release cycles to detect breaking changes.
+_For IBMers only:_ A monthly meeting for teams building on top of Carbon to
+discuss best practices, identify areas of reuse, and bring up things the Carbon
+team can do to make their jobs easier. This group helps out with Carbon's
+release cycles to detect breaking changes.
 
 <Button
   kind="tertiary"
