--- a/src/pages/components/form/usage.mdx
+++ b/src/pages/components/form/usage.mdx
@@ -287,10 +287,10 @@ characters."_
 </Column>
 </Row>
 
-### Optional vs. required fields
+### Optional versus required fields
 
 All fields in a form are assumed required, with optional fields being tagged as
-so.
+so. It is recommended that an instruction precedes the form stating either "All fields are required" or "All fields are required unless marked optional".
 
 <Row>
 <Column colLg={8}>
