docs: committee updates

--- a/src/pages/all-about-carbon/leadership.mdx
+++ b/src/pages/all-about-carbon/leadership.mdx
@@ -42,6 +42,16 @@ practitioners to ensure Carbon stays true to the community we're serving.
 
 <Row>
 
+<Profile name="Sophia Levens" title="Executive Director of Design, IBM Sterling | Chair, Steering committee">
+
+![Sophia Levens headshot](/images/team/levens_sophia.png)
+
+</Profile>
+<Profile name="Robin Cannon" title="Program Director, Carbon | Co-chair, Steering committee">
+
+![Robin Cannon headshot](/images/team/cannon_robin.png)
+
+</Profile>
 <Profile name="Mike Abbink" title="IBM Distinguished Designer, Carbon">
 
 ![Mike Abbink headshot](/images/team/abbink_mike.png)
@@ -57,19 +67,9 @@ practitioners to ensure Carbon stays true to the community we're serving.
 ![Cameron Calder headshot](/images/team/calder_cameron.png)
 
 </Profile>
-<Profile name="Robin Cannon" title="Program Director, Carbon">
-
-![Robin Cannon headshot](/images/team/cannon_robin.png)
-
-</Profile>
 <Profile name="Trish Garrett" title="To be confirmed">
 
 ![Trish Garrett headshot](/images/team/garrett_tricia.png)
-
-</Profile>
-<Profile name="Sophia Levens" title="To be confirmed">
-
-![Sophia Levens headshot](/images/team/levens_sophia.png)
 
 </Profile>
 <Profile name="David Levinson" title="IBM Design Principal, IBM Cloud and Cognitive Software">
