docs: team updates

--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -22,8 +22,8 @@ practitioners to ensure Carbon stays true to the community we're serving.
 
 ### Responsibilities
 
-- Improve design strategy, quality, and consistency within the design system to
-  ensure excellence.
+- Improve design strategy, quality, and consistency within the design system and
+  our guidance to ensure excellence.
 - Promote and support usage of, and contribution to, the Carbon Design System
   within their organizations.
 - Identify and align components/patterns/content that are multiproduct or
@@ -38,16 +38,16 @@ practitioners to ensure Carbon stays true to the community we're serving.
   teams and business units.
 - Provide a quarterly update to the advisory board.
 
-### Members
+### The people
 
 <Row>
 
-<Profile name="Sophia Levens" title="Executive Director of Design, IBM Sterling | Chair, Steering committee">
+<Profile name="Sophia Levens" title="Executive Director of Design, IBM Sterling; Chair, Steering committee">
 
 ![Sophia Levens headshot](/images/team/levens_sophia.png)
 
 </Profile>
-<Profile name="Robin Cannon" title="Program Director, Carbon | Co-chair, Steering committee">
+<Profile name="Robin Cannon" title="Program Director, Carbon; Co-chair, Steering committee">
 
 ![Robin Cannon headshot](/images/team/cannon_robin.png)
 
@@ -82,6 +82,11 @@ practitioners to ensure Carbon stays true to the community we're serving.
 ![Alison Joseph headshot](/images/team/joseph_alison.png)
 
 </Profile>
+<Profile name="Tessa Rodes" title="Senior Design Manager, IBM Cloud">
+
+![Tessa Rodes headshot](/images/team/rodes_tessa.png)
+
+</Profile>
 <Profile name="Jeannie Servaas" title="IBM Design Principal, Carbon">
 
 ![Jeannie Servaas headshot](/images/team/servaas_jean.png)
@@ -92,9 +97,9 @@ practitioners to ensure Carbon stays true to the community we're serving.
 ![Wonil Suh headshot](/images/team/suh_wonil.png)
 
 </Profile>
-<Profile name="Tessa Rodes" title="Senior Design Manager, IBM Cloud">
+<Profile name="Diana Tran" title="Visual Design Practice Lead, IBM Sterling">
 
-![Tessa Rodes headshot](/images/team/rodes_tessa.png)
+![Diana Tran headshot](/images/team/tran_diana.png)
 
 </Profile>
 </Row>
@@ -123,7 +128,7 @@ a quarterly report from the steering committee. This report details the status
 of design quality, adoption, and contribution from the product teams/business
 units from the Carbon Design System.
 
-### Members
+### The people
 
 <Row>
 
