docs: updated responsibilities

--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -26,16 +26,11 @@ practitioners to ensure Carbon stays true to the community we're serving.
   our guidance to ensure excellence.
 - Promote and support usage of, and contribution to, the Carbon Design System
   within their organizations.
-- Identify and align components/patterns/content that are multiproduct or
-  universal.
-- Ensure consistent design standards across different implementations of Carbon,
-  for example a button in Carbon React looks the same as a button in Carbon
-  Angular.
-- Help project teams refine their scope of work. Highlight projects of
-  particularly high potential business value. Help projects add collaborators
-  and find the resources they need.
-- Assist with standardizing information and tooling to support sharing across
-  teams and business units.
+- Assist with the alignment and standardization of components, patterns,
+  content, and tooling to ensure consistency of design standards and resources
+  across teams and business units.
+- Highlight projects of high potential business value, and assist with finding
+  collaborators and resources.
 - Provide a quarterly update to the advisory board.
 
 ### The people
