fix: make img alt attribute empty

--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -21,7 +21,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#simple-bar-(discrete)"
     >
 
-![Simple bar (vertical)](images/bar.svg)
+![](images/bar.svg)
 
 </OverviewCard>
 </Column>
@@ -31,7 +31,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#grouped-bar-(discrete)"
     >
 
-![Grouped bar (vertical)](images/bargrouped.svg)
+![](images/bargrouped.svg)
 
 </OverviewCard>
 </Column>
@@ -41,7 +41,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#bubble"
     >
 
-![Bubble](images/bubble.svg)
+![](images/bubble.svg)
 
 </OverviewCard>
 </Column>
@@ -51,7 +51,7 @@ appropriate chart type.
 	href="/data-visualization/basic-charts#radar"
     >
 
-![Radar](images/radar.svg)
+![](images/radar.svg)
 
 </OverviewCard>
 </Column>
@@ -61,7 +61,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#simple-horizontal-bar-(discrete)"
     >
 
-![Simple bar (horizontal)](images/barhoriz.svg)
+![](images/barhoriz.svg)
 
 </OverviewCard>
 </Column>
@@ -71,7 +71,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#grouped-horizontal-bar-(discrete)"
     >
 
-![Grouped bar (horizontal)](images/grouped-bar-horizontal.svg)
+![](images/grouped-bar-horizontal.svg)
 
 </OverviewCard>
 </Column>
@@ -86,7 +86,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#line"
     >
 
-![Line](images/line.svg)
+![](images/line.svg)
 
 </OverviewCard>
 </Column>
@@ -96,7 +96,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#area"
     >
 
-![Area](images/area.svg)
+![](images/area.svg)
 
 </OverviewCard>
 </Column>
@@ -106,7 +106,7 @@ appropriate chart type.
 	disabled
     >
 
-![Histogram](images/histogram.svg)
+![](images/histogram.svg)
 
 </OverviewCard>
 </Column>
@@ -116,7 +116,7 @@ appropriate chart type.
 	disabled
     >
 
-![Stream](images/stream.svg)
+![](images/stream.svg)
 
 </OverviewCard>
 </Column>
@@ -131,7 +131,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#donut"
     >
 
-![Donut](images/donut.svg)
+![](images/donut.svg)
 
 </OverviewCard>
 </Column>
@@ -141,7 +141,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#pie"
     >
 
-![Pie](images/pie.svg)
+![](images/pie.svg)
 
 </OverviewCard>
 </Column>
@@ -152,7 +152,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts/#stacked-horizontal-bar-(discrete)"
     >
 
-![Stacked bar horizontal](images/stacked-bar-horizontal.svg)
+![](images/stacked-bar-horizontal.svg)
 
 </OverviewCard>
 </Column>
@@ -162,7 +162,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts/#stacked-bar-(discrete)"
     >
 
-![Stacked bar (vertical)](images/barstack.svg)
+![](images/barstack.svg)
 
 </OverviewCard>
 </Column>
@@ -172,7 +172,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts/#stacked-area-chart"
     >
 
-![Stacked area](images/areastack.svg)
+![](images/areastack.svg)
 
 </OverviewCard>
 </Column>
@@ -182,7 +182,7 @@ appropriate chart type.
    href="/data-visualization/basic-charts/#meter"
    >
 
-![Gauge](images/meter.svg)
+![](images/meter.svg)
 
 </OverviewCard>
 </Column>
@@ -193,7 +193,7 @@ appropriate chart type.
    href="/data-visualization/basic-charts/#gauge"
    >
 
-![Gauge](images/gauge.svg)
+![](images/gauge.svg)
 
 </OverviewCard>
 </Column>
@@ -205,7 +205,7 @@ appropriate chart type.
 	tag="Design only"
     >
 
-![Tree map](images/treemap.svg)
+![](images/treemap.svg)
 
 </OverviewCard>
 </Column>
@@ -220,7 +220,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#scatter"
     >
 
-![Scatter](images/scatter.svg)
+![](images/scatter.svg)
 
 </OverviewCard>
 </Column>
@@ -231,7 +231,7 @@ appropriate chart type.
     tag="Design only"
     >
 
-![Heat map](images/heatmap.svg)
+![](images/heatmap.svg)
 
 </OverviewCard>
 </Column>
@@ -242,7 +242,7 @@ appropriate chart type.
     tag="Design only"
     >
 
-![Parallel coordinates](images/parallel.svg)
+![](images/parallel.svg)
 
 </OverviewCard>
 </Column>
@@ -258,7 +258,7 @@ appropriate chart type.
     tag="Design only"
     >
 
-![Alluvial diagram](images/alluvial.svg)
+![](images/alluvial.svg)
 
 </OverviewCard>
 </Column>
@@ -269,7 +269,7 @@ appropriate chart type.
     tag="Design only"
     >
 
-![Network diagram](images/treediagram.svg)
+![](images/treediagram.svg)
 
 </OverviewCard>
 </Column>
@@ -285,7 +285,7 @@ appropriate chart type.
     tag="Design only"
     >
 
-![Choropleth map](images/geo-choropleth.svg)
+![](images/geo-choropleth.svg)
 
 </OverviewCard>
 </Column>
@@ -296,7 +296,7 @@ appropriate chart type.
     tag="Design only"
     >
 
-![Proportional symbol](images/geo-proportion.svg)
+![](images/geo-proportion.svg)
 
 </OverviewCard>
 </Column>
@@ -307,7 +307,7 @@ appropriate chart type.
     tag="Design only"
     >
 
-![Connecting lines](images/geo-connection.svg)
+![](images/geo-connection.svg)
 
 </OverviewCard>
 </Column>
