--- a/src/pages/developing/react-tutorial/step-1.mdx
+++ b/src/pages/developing/react-tutorial/step-1.mdx
@@ -551,7 +551,7 @@ import RepoPage from './content/RepoPage';
 This allows us to use our page content components and routing components from
 `react-router-dom`.
 
-The next thing we need to is to update what we're returning in `App.js`. We currently
+The next thing we need to do is update what we're returning to `App.js`. We currently
 just have a button in our content. In order to render our pages correctly, we
 need to delete the `Button` component within `Content` (and remove the Button
 import).
