Fix grammar and typos (#1859)
* Fix grammar and typos

* Update src/pages/developing/react-tutorial/step-1.mdx

Co-authored-by: TJ Egan <tw15egan@gmail.com>

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/src/pages/developing/react-tutorial/step-1.mdx
+++ b/src/pages/developing/react-tutorial/step-1.mdx
@@ -200,7 +200,7 @@ By modifying `index.scss` as little as possible and storing all app-specific
 styling in `app.scss` we will make compile times much quicker. Storing the
 app-specific styling in a separate file also makes good organizational sense.
 
-Next we'll import a `Button` from Carbon to test that our dependencies are
+Next, we'll import a `Button` from Carbon to test that our dependencies are
 working properly. At the top of `App.js`, import the `Button` by adding the
 following:
 
@@ -239,7 +239,7 @@ there may be breaking changes in the future.
 
 </InlineNotification>
 
-Next we're going to create a React component called `TutorialHeader` to use with
+Next, we're going to create a React component called `TutorialHeader` to use with
 the UI Shell Carbon component. In the `src` directory, create a `components`
 directory and inside of that, a `TutorialHeader` directory. Create the following
 files inside `src/components/TutorialHeader`:
@@ -334,7 +334,7 @@ straight to the main content.
 
 **Note:** It's important that the `TutorialHeader` returns the Carbon `Header`
 as its containing element, as we'll later be rendering `TutorialHeader` in
-`App.js` as a preceeding sibling of `Content`, another UI Shell component. Those
+`App.js` as a preceding sibling of `Content`, another UI Shell component. Those
 components need to live one after another for the UI Shell to properly render.
 
 </InlineNotification>
@@ -423,7 +423,7 @@ src/content
 └── RepoPage
 ```
 
-Next we'll set up these folders the same way we set up
+Next, we'll set up these folders the same way we set up
 `src/components/TutorialHeader`.
 
 Create the following files in the `LandingPage` folder:
@@ -465,7 +465,7 @@ import LandingPage from './LandingPage';
 export default LandingPage;
 ```
 
-Next in `LandingPage.js` we'll create our component.
+Next in `LandingPage.js`, we'll create our component.
 
 ```javascript path=src/content/LandingPage/LandingPage.js
 import React from 'react';
@@ -551,7 +551,7 @@ import RepoPage from './content/RepoPage';
 This allows us to use our page content components and routing components from
 `react-router-dom`.
 
-Next thing we need to is update what we're returning in `App.js` . We currently
+The next thing we need to do is update what we're returning to `App.js`. We currently
 just have a button in our content. In order to render our pages correctly, we
 need to delete the `Button` component within `Content` (and remove the Button
 import).
@@ -601,7 +601,7 @@ page reload!
 ## Submit pull request
 
 We're going to submit a pull request to verify completion of this tutorial step
-and demonstrate a couple related concepts.
+and demonstrate a couple of related concepts.
 
 ### Continuous integration (CI) check
 
@@ -663,7 +663,7 @@ over HTTPS.
 <InlineNotification>
 
 **Note:** If you receive a `non-fast-forward` error, it's likely that your
-forked repository is behind the original repository and needs updated. This can
+forked repository is behind the original repository and needs to be updated. This can
 happen if the tutorial was updated after you began working on it. To fix, run
 `git pull upstream react-step-1` to merge the changes into your branch, then you
 can try pushing again. Or, you can
