docs: updated descriptions

--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -62,9 +62,9 @@ practitioners to ensure Carbon stays true to the community we're serving.
 ![Cameron Calder headshot](/images/team/calder_cameron.png)
 
 </Profile>
-<Profile name="Trish Garrett" title="To be confirmed">
+<Profile name="Tricia Garrett" title="Design Principal, Master Inventor, Watson Health">
 
-![Trish Garrett headshot](/images/team/garrett_tricia.png)
+![Tricia Garrett headshot](/images/team/garrett_tricia.png)
 
 </Profile>
 <Profile name="David Levinson" title="IBM Design Principal, IBM Cloud and Cognitive Software">
@@ -114,14 +114,6 @@ allocation to support Carbon's work.
   of design standards, guidance, and excellence with business impact.
 - Provide the steering committee with feedback on business needs, to facilitate
   a Carbon roadmap that meets those needs.
-
-The board is supported by the steering committee, whose role is to provide
-oversight and direction for Carbon and its community, and related projects.
-
-Advisory board members meet for one half day every quarter, at which they review
-a quarterly report from the steering committee. This report details the status
-of design quality, adoption, and contribution from the product teams/business
-units from the Carbon Design System.
 
 ### The people
 
