fix: use GATSBY_EMPTY_ALT keyword
the keyword GATSBY_EMPTY_ALT is used to generate an img tag with empty alt attribute

--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -21,7 +21,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#simple-bar-(discrete)"
     >
 
-![](images/bar.svg)
+![GATSBY_EMPTY_ALT](images/bar.svg)
 
 </OverviewCard>
 </Column>
@@ -31,7 +31,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#grouped-bar-(discrete)"
     >
 
-![](images/bargrouped.svg)
+![GATSBY_EMPTY_ALT](images/bargrouped.svg)
 
 </OverviewCard>
 </Column>
@@ -41,7 +41,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#bubble"
     >
 
-![](images/bubble.svg)
+![GATSBY_EMPTY_ALT](images/bubble.svg)
 
 </OverviewCard>
 </Column>
@@ -51,7 +51,7 @@ appropriate chart type.
 	href="/data-visualization/basic-charts#radar"
     >
 
-![](images/radar.svg)
+![GATSBY_EMPTY_ALT](images/radar.svg)
 
 </OverviewCard>
 </Column>
@@ -61,7 +61,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#simple-horizontal-bar-(discrete)"
     >
 
-![](images/barhoriz.svg)
+![GATSBY_EMPTY_ALT](images/barhoriz.svg)
 
 </OverviewCard>
 </Column>
@@ -71,7 +71,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#grouped-horizontal-bar-(discrete)"
     >
 
-![](images/grouped-bar-horizontal.svg)
+![GATSBY_EMPTY_ALT](images/grouped-bar-horizontal.svg)
 
 </OverviewCard>
 </Column>
@@ -86,7 +86,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#line"
     >
 
-![](images/line.svg)
+![GATSBY_EMPTY_ALT](images/line.svg)
 
 </OverviewCard>
 </Column>
@@ -96,7 +96,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#area"
     >
 
-![](images/area.svg)
+![GATSBY_EMPTY_ALT](images/area.svg)
 
 </OverviewCard>
 </Column>
@@ -106,7 +106,7 @@ appropriate chart type.
 	disabled
     >
 
-![](images/histogram.svg)
+![GATSBY_EMPTY_ALT](images/histogram.svg)
 
 </OverviewCard>
 </Column>
@@ -116,7 +116,7 @@ appropriate chart type.
 	disabled
     >
 
-![](images/stream.svg)
+![GATSBY_EMPTY_ALT](images/stream.svg)
 
 </OverviewCard>
 </Column>
@@ -131,7 +131,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#donut"
     >
 
-![](images/donut.svg)
+![GATSBY_EMPTY_ALT](images/donut.svg)
 
 </OverviewCard>
 </Column>
@@ -141,7 +141,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#pie"
     >
 
-![](images/pie.svg)
+![GATSBY_EMPTY_ALT](images/pie.svg)
 
 </OverviewCard>
 </Column>
@@ -152,7 +152,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts/#stacked-horizontal-bar-(discrete)"
     >
 
-![](images/stacked-bar-horizontal.svg)
+![GATSBY_EMPTY_ALT](images/stacked-bar-horizontal.svg)
 
 </OverviewCard>
 </Column>
@@ -162,7 +162,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts/#stacked-bar-(discrete)"
     >
 
-![](images/barstack.svg)
+![GATSBY_EMPTY_ALT](images/barstack.svg)
 
 </OverviewCard>
 </Column>
@@ -172,7 +172,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts/#stacked-area-chart"
     >
 
-![](images/areastack.svg)
+![GATSBY_EMPTY_ALT](images/areastack.svg)
 
 </OverviewCard>
 </Column>
@@ -182,7 +182,7 @@ appropriate chart type.
    href="/data-visualization/basic-charts/#meter"
    >
 
-![](images/meter.svg)
+![GATSBY_EMPTY_ALT](images/meter.svg)
 
 </OverviewCard>
 </Column>
@@ -193,7 +193,7 @@ appropriate chart type.
    href="/data-visualization/basic-charts/#gauge"
    >
 
-![](images/gauge.svg)
+![GATSBY_EMPTY_ALT](images/gauge.svg)
 
 </OverviewCard>
 </Column>
@@ -205,7 +205,7 @@ appropriate chart type.
 	tag="Design only"
     >
 
-![](images/treemap.svg)
+![GATSBY_EMPTY_ALT](images/treemap.svg)
 
 </OverviewCard>
 </Column>
@@ -220,7 +220,7 @@ appropriate chart type.
     href="/data-visualization/basic-charts#scatter"
     >
 
-![](images/scatter.svg)
+![GATSBY_EMPTY_ALT](images/scatter.svg)
 
 </OverviewCard>
 </Column>
@@ -231,7 +231,7 @@ appropriate chart type.
     tag="Design only"
     >
 
-![](images/heatmap.svg)
+![GATSBY_EMPTY_ALT](images/heatmap.svg)
 
 </OverviewCard>
 </Column>
@@ -242,7 +242,7 @@ appropriate chart type.
     tag="Design only"
     >
 
-![](images/parallel.svg)
+![GATSBY_EMPTY_ALT](images/parallel.svg)
 
 </OverviewCard>
 </Column>
@@ -258,7 +258,7 @@ appropriate chart type.
     tag="Design only"
     >
 
-![](images/alluvial.svg)
+![GATSBY_EMPTY_ALT](images/alluvial.svg)
 
 </OverviewCard>
 </Column>
@@ -269,7 +269,7 @@ appropriate chart type.
     tag="Design only"
     >
 
-![](images/treediagram.svg)
+![GATSBY_EMPTY_ALT](images/treediagram.svg)
 
 </OverviewCard>
 </Column>
@@ -285,7 +285,7 @@ appropriate chart type.
     tag="Design only"
     >
 
-![](images/geo-choropleth.svg)
+![GATSBY_EMPTY_ALT](images/geo-choropleth.svg)
 
 </OverviewCard>
 </Column>
@@ -296,7 +296,7 @@ appropriate chart type.
     tag="Design only"
     >
 
-![](images/geo-proportion.svg)
+![GATSBY_EMPTY_ALT](images/geo-proportion.svg)
 
 </OverviewCard>
 </Column>
@@ -307,7 +307,7 @@ appropriate chart type.
     tag="Design only"
     >
 
-![](images/geo-connection.svg)
+![GATSBY_EMPTY_ALT](images/geo-connection.svg)
 
 </OverviewCard>
 </Column>
