docs: add medium article to home and news

--- a/src/pages/whats-happening/news-and-articles/index.mdx
+++ b/src/pages/whats-happening/news-and-articles/index.mdx
@@ -22,6 +22,18 @@ about design systems.
 <Row>
 <Column colLg={4} colMd={4} noGutterMdLeft>
 <ArticleCard
+    title="Hacktoberfest 2020 is here"
+    author="Scott Strubberg"
+    date="October 1, 2020"
+    href="https://medium.com/carbondesign/hacktoberfest-2020-is-here-2638d4f2c05 "
+    >
+
+![Hacktoberfest 2020](/images/2020_hacktoberfest.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
     title="Sharing components across teams"
     author="Anna Gonzales"
     date="September 23, 2020"
