--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -111,6 +111,19 @@ building websites and user interfaces.
 <Column colLg={4} colMd={4} noGutterMdLeft>
 <ArticleCard
     color="dark"
+    title="Hacktoberfest 2020 is here"
+    author="Scott Strubberg"
+    date="October 1, 2020"
+    href="https://medium.com/carbondesign/hacktoberfest-2020-is-here-2638d4f2c05 "
+    >
+
+![Hacktoberfest 2020](./homepage/images/2020_hacktoberfest.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    color="dark"
     title="Sharing components across teams"
     author="Anna Gonzales"
     date="September 23, 2020"
@@ -132,19 +145,6 @@ building websites and user interfaces.
     >
 
 ![New information architecture](/whats-happening/news-and-articles/images/new_IA.png)
-
-</ArticleCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterMdLeft>
-<ArticleCard
-    color="dark"
-    title="Seven new UX patterns for Carbon"
-    author="Jan Child"
-    date="January 9, 2020"
-    href="https://medium.com/carbondesign/seven-new-ux-patterns-for-carbon-f4a18c20c535"
-    >
-
-![New ux patterns announcement](whats-happening/news-and-articles/images/patterns_announcement.png)
 
 </ArticleCard>
 </Column>
