fix broken dataviz sketch file links

--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -104,7 +104,7 @@ design kit, visit the [Design kits](/designing/kits/sketch) page.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="Data visualization master Sketch file"
-    href="https://github.com/carbon-design-system/carbon-design-kit/tree/master/Carbon%20Design%20Kit%20-%2010.10.0/data-visualization"
+    href="https://www.sketch.com/s/1a36060a-7a5d-4ddb-aab1-639caa1f74d4"
     actionIcon="download">
     <MdxIcon name="sketch" />
   </ResourceCard>
