docs: data viz medium article add

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -109,6 +109,20 @@ building websites and user interfaces.
 
 <Row>
 <Column colLg={4} colMd={4} noGutterMdLeft>
+
+<ArticleCard
+    color="dark"
+    title="Color palettes and accessibility features for data visualization"
+    author="Shixie Shi Trofimov"
+    date="October 5, 2020"
+    href="https://medium.com/carbondesign/color-palettes-and-accessibility-features-for-data-visualization-7869f4874fca"
+    >
+
+![Color palettes and accessibility for data viz](./homepage/images/2020_dataviz.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
 <ArticleCard
     color="dark"
     title="Hacktoberfest 2020 is here"
@@ -131,20 +145,6 @@ building websites and user interfaces.
     >
 
 ![Component index](./homepage/images/component_index.png)
-
-</ArticleCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterMdLeft>
-
-<ArticleCard
-    color="dark"
-    title="Carbon’s new information architecture"
-    author="Jan Child"
-    date="August 31, 2020"
-    href="https://medium.com/carbondesign/carbons-new-information-architecture-531c52207205"
-    >
-
-![New information architecture](/whats-happening/news-and-articles/images/new_IA.png)
 
 </ArticleCard>
 </Column>
