--- a/src/pages/whats-happening/news-and-articles/index.mdx
+++ b/src/pages/whats-happening/news-and-articles/index.mdx
@@ -21,6 +21,19 @@ about design systems.
 
 <Row>
 <Column colLg={4} colMd={4} noGutterMdLeft>
+
+<ArticleCard
+    title="Color palettes and accessibility features for data visualization"
+    author="Shixie Shi Trofimov"
+    date="October 5, 2020"
+    href="https://medium.com/carbondesign/color-palettes-and-accessibility-features-for-data-visualization-7869f4874fca"
+    >
+
+![Color palettes and accessibility for data viz](/images/2020_dataviz.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
 <ArticleCard
     title="Hacktoberfest 2020 is here"
     author="Scott Strubberg"
