--- a/src/pages/community/chart-index.mdx
+++ b/src/pages/community/chart-index.mdx
@@ -1,10 +1,12 @@
 ---
-title: Charts index
+title: Chart index
 description:
   These charts are developed and maintained by members of the IBM Carbon
   community. Some may only be accessible to IBMers. They may change over time,
   and they may be incomplete or experimental. For support, please contact the
   contributors listed on each page.
+
+tabs: ['Chart index', 'Contribute a chart']
 ---
 
 import ChartIndexPage from '../../components/ChartIndexPage';
