some ideas on projects page format

--- a/src/pages/all-about-carbon/projects/carbon-data-viz-project.mdx
+++ b/src/pages/all-about-carbon/projects/carbon-data-viz-project.mdx
@@ -1,6 +1,8 @@
 ---
 title: Carbon data visualization
-description: This is a test project.
+description:
+  Provides design support to different data visualization initiatives, and
+  brings consistency and visibility to development implementations
 ---
 
 ## Project Information
@@ -10,11 +12,10 @@ description: This is a test project.
 - Prioritize chart and data visualization types for design attention.
 - Support teams in using the best chart implementations for their product needs.
 
-**Category:** Foundational
-
 **Project status:** Active
 
-**GitHub Repository:** [repo link](https://github.com)
+**GitHub Repository:**
+[https://github.com/carbon-design-system/carbon-charts](https://github.com/carbon-design-system/carbon-charts)
 
 | Team member         |                                            |     |
 | ------------------- | ------------------------------------------ | --- |
@@ -27,5 +28,5 @@ description: This is a test project.
 
 **Releases:**
 
-- v1.0 (DD-MM-YYYY)
-- v0.9 (DD-MM-YYYY)
+- [v0.39.1](https://github.com/carbon-design-system/carbon-charts/releases/tag/v0.39.1)
+  (10-06-2020)
