--- a/src/pages/all-about-carbon/projects.mdx
+++ b/src/pages/all-about-carbon/projects.mdx
@@ -3,6 +3,8 @@ title: Projects
 description:
   Projects are scoped work initiatives formed by groups of subject matter
   experts.
+
+tabs: ['Projects', 'Add a project']
 ---
 
 <PageDescription>
@@ -13,36 +15,18 @@ They may be permanent initiatives, or formed for work with a clear end point.
 
 </PageDescription>
 
-## Foundational projects
-
-- Delivers guidance, assets, services used by all projects
-
-## Component projects
-
-- Implements guidance and specifications for a given platform(s) (e.g. web,
-  desktop, iOS, Android) in a particular tool, library, or framework along with
-  applicable documentation
-- Makes the common guidance and specifications usable for designers and
-  developers in their tool, library, or framework of choice
-- Match the behavior, interaction, visuals, etc. of the canonical component
-  projects
-
-## Product projects
-
-- Extends (but is not divergent or in conflict with) guidance and assets from
-  foundational and component projects for use among a product or collection of
-  products
-- Assets published by product projects may be used by other product projects
-  (horizontal sharing is encouraged)
-- Often includes tooling and implementations to make delivering cohesive work
-  faster and simpler for product teams
-
-## Cross-product projects
-
-- Guidance, components, user journeys, etc. where it's advantageous to abstract
-  away from product projects (e.g. project members represent many unrelated
-  products)
+Projects may be longer or shorter in duration and small or large in resourcing.
+No matter what the scale of a project they should always define their
+usefulness, value, and impact for our users, the design system and IBM.
 
 ## Project list
 
-- [Carbon Data Visualization](projects/carbon-data-viz-project)
+### Strategic priorities
+
+The Carbon steering committee identifies projects that address particular
+strategic imperatives for the Carbon Design System and IBM.
+
+- [Carbon data visualization](projects/carbon-data-viz-project)
+- [Carbon devtools](projects/carbon-devtools)
+
+### Other projects
