cleanup and page title change

--- a/src/pages/community/contribute-a-chart.mdx
+++ b/src/pages/community/contribute-a-chart.mdx
@@ -4,7 +4,7 @@ description:
   Anyone can add assets to the community chart index. Maintainers can submit a
   short pull request in GitHub to a chart to the index.
 
-tabs: ['Chart index', 'Contribute a chart']
+tabs: ['Data visualization index', 'Contribute a chart']
 ---
 
 <PageDescription>
