small content tweaks, added an 'add project' tab

--- a/src/pages/all-about-carbon/projects.mdx
+++ b/src/pages/all-about-carbon/projects.mdx
@@ -28,5 +28,6 @@ strategic imperatives for the Carbon Design System and IBM.
 
 - [Carbon data visualization](projects/carbon-data-viz-project)
 - [Carbon devtools](projects/carbon-devtools)
+- [Carbon modular layouts](projects/carbon-modular-layouts)
 
 ### Other projects
