--- a/src/pages/all-about-carbon/projects/carbon-data-viz-project.mdx
+++ b/src/pages/all-about-carbon/projects/carbon-data-viz-project.mdx
@@ -17,12 +17,12 @@ description:
 **GitHub Repository:**
 [https://github.com/carbon-design-system/carbon-charts](https://github.com/carbon-design-system/carbon-charts)
 
-| Team member         |                                            |     |
-| ------------------- | ------------------------------------------ | --- |
-| Iliad Moosavi       | Front-end Developer, AI Applications       |
-| Jean Servaas        | Design Principal, Carbon Design System     |
-| Ramon Pisters       | Ramon Pisters, VIDA Visualization Platform |
-| Voranouth Supadulya | Software Designer, Cloud & Data Platform   |
+| Team member         |                                               |
+| ------------------- | --------------------------------------------- |
+| Iliad Moosavi       | Front-end developer, AI Applications          |
+| Jean Servaas        | Design principal, Carbon Design System        |
+| Ramon Pisters       | Program director, VIDA Visualization Platform |
+| Voranouth Supadulya | Software designer, Cloud & Data Platform      |
 
 [Volunteer for this project](http://testlink)
 
