fix: use new fathom syntax

--- a/src/pages/designing/kits/sketch.mdx
+++ b/src/pages/designing/kits/sketch.mdx
@@ -38,7 +38,7 @@ own Sketch library. You can subscribe to as many libraries as you'd like.
 <Row className="resource-card-group">
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
-      onClick={() => fathom('trackGoal', 'P0OEN9TS', 0)}
+      onClick={() => fathom.trackGoal('P0OEN9TS', 0)}
       subTitle="Get the White theme"
       href="sketch://add-library/cloud/557b75ff-67d3-41ab-ada5-fa25447218c1">
       <MdxIcon name="sketch" />
@@ -46,7 +46,7 @@ own Sketch library. You can subscribe to as many libraries as you'd like.
   </Column>
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
-      onClick={() => fathom('trackGoal', 'T7D1HJ3L', 0)}
+      onClick={() => fathom.trackGoal('T7D1HJ3L', 0)}
       subTitle="Get the Gray 10 theme"
       href="sketch://add-library/cloud/b4ea2a21-4b1a-4c64-99dc-a1365eff5d5f">
       <MdxIcon name="sketch" />
@@ -54,7 +54,7 @@ own Sketch library. You can subscribe to as many libraries as you'd like.
   </Column>
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
-      onClick={() => fathom('trackGoal', 'LYFJTPDE', 0)}
+      onClick={() => fathom.trackGoal('LYFJTPDE', 0)}
       subTitle="Get the Gray 90 theme"
       href="sketch://add-library/cloud/a324c6dd-df97-435e-b79f-3a29e04922fc">
       <MdxIcon name="sketch" />
@@ -62,7 +62,7 @@ own Sketch library. You can subscribe to as many libraries as you'd like.
   </Column>
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
-      onClick={() => fathom('trackGoal', '3XH0SIBJ', 0)}
+      onClick={() => fathom.trackGoal('3XH0SIBJ', 0)}
       subTitle="Get the Gray 100 theme"
       href="sketch://add-library/cloud/9d47a4fd-70dd-44ff-bc57-22c79da8e477">
       <MdxIcon name="sketch" />
