--- a/src/pages/whats-happening/changelog-and-roadmap/index.mdx
+++ b/src/pages/whats-happening/changelog-and-roadmap/index.mdx
@@ -17,7 +17,7 @@ Carbon’s future.
 <Row className="resource-card-group">
 <Column colMd={4} colLg={4} noGutterSm>
   <ResourceCard
-    onClick={() => fathom('trackGoal', 'P0OEN9TS', 0)}
+    onClick={() => fathom.trackGoal('P0OEN9TS', 0)}
     subTitle="Changelog"
     href="https://github.com/carbon-design-system/carbon/releases">
     <MdxIcon name="github" />
@@ -25,7 +25,7 @@ Carbon’s future.
 </Column>
 <Column colMd={4} colLg={4} noGutterSm>
   <ResourceCard
-    onClick={() => fathom('trackGoal', 'P0OEN9TS', 0)}
+    onClick={() => fathom.trackGoal('P0OEN9TS', 0)}
     subTitle="Roadmap"
     href="https://app.zenhub.com/workspaces/system-squad-593830641344b813db10934d/roadmap">
 
