--- a/src/pages/whats-happening/work-in-progress/index.mdx
+++ b/src/pages/whats-happening/work-in-progress/index.mdx
@@ -40,19 +40,19 @@ provide feedback and have a say in Carbon's direction.
     title="Light theme"
     href="sketch://add-library/cloud/a3343128-adb6-489c-9e62-709d89ba76e9"
     actionIcon="launch"
-    onClick={() => fathom('trackGoal', 'GZNMLWPV', 0)}
+    onClick={() => fathom.trackGoal('GZNMLWPV', 0)}
   />
   <MiniCard
     title="Dark theme"
     href="sketch://add-library/cloud/1f59f590-6915-47b0-bf06-6fd66209b3b3"
     actionIcon="launch"
-    onClick={() => fathom('trackGoal', 'BHFADJ59', 0)}
+    onClick={() => fathom.trackGoal('BHFADJ59', 0)}
   />
   <MiniCard
     title="IBM Grid template"
     href="https://www.sketch.com/s/42e694ee-4b37-41c9-8c8f-480e2415d9de"
     actionIcon="launch"
-    onClick={() => fathom('trackGoal', 'TWMSHNQP', 0)}
+    onClick={() => fathom.trackGoal('TWMSHNQP', 0)}
   />
 </CardGroup>
 
@@ -60,7 +60,7 @@ provide feedback and have a say in Carbon's direction.
 
 <CardGroup>
   <MiniCard
-    onClick={() => fathom('trackGoal', 'B3AN6GVA', 0)}
+    onClick={() => fathom.trackGoal('B3AN6GVA', 0)}
     title="Tree view component"
     href="https://carbon-website-git-fork-designertyler-treeview03092020.carbon-design-system.now.sh/components/tree-view/usage"
   />
@@ -70,7 +70,7 @@ provide feedback and have a say in Carbon's direction.
 
 <CardGroup>
   <MiniCard
-    onClick={() => fathom('trackGoal', 'ZASURK2Q', 0)}
+    onClick={() => fathom.trackGoal('ZASURK2Q', 0)}
     title="Activation concepts"
     href="https://github.com/carbon-design-system/carbon-website/issues/1519"
   />
