docs: advisory board updates

--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -164,5 +164,9 @@ allocation to support Carbon's work.
 ![Shani Sandy headshot](/images/team/sandy_shani.png)
 
 </Profile>
+<Profile name="Billy Seabrook" title="Global Chief Creative Officer, IBM iX">
 
+![Billy Seabrook headshot](/images/team/seabrook_billy.png)
+
+</Profile>
 </Row>
