repurposing component index code for charts index (#1746)
* repurposing component index code for charts index

* dummy data causing build prob?

* dummy data

* does it build with parameter absent, not incorrect

* tweaks made during our call

* added ai-apps basic charts

* feat(chart-index): add carbon charts files to index

* chore(chart-index): fix duplicate titles

* updated filters and test thumbnails

* Optimised images with calibre/image-actions

* added 'Other' as a valid option for chart type

* added a 'complexity' filter

* Optimised images with calibre/image-actions

* Added advanced charts from carbon and ai-apps

* images for all carbon-charts, fix capitalization

* cleanup and page title change

* remove cognos as maintainer until they have content

* add contribution note to no result text

* fix misspelt chart name

* Optimised images with calibre/image-actions

* resolve image conflict

* Optimised images with calibre/image-actions

* Optimised images with calibre/image-actions

Co-authored-by: Alessandra Davila <aledavila@ibm.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -556,8 +556,9 @@ There are exceptions to this rule for situations in which button length could
 cause problems in compact UIs or negatively impact translation, but the {verb} +
 {noun} formula is still best practice.
 
-For consistency, see Carbon’s [content guidelines](/guidelines/content/action-labels)
-for a list of recommended action labels.
+For consistency, see Carbon’s
+[content guidelines](/guidelines/content/action-labels) for a list of
+recommended action labels.
 
 <DoDontRow>
   <DoDont caption="Do use the {verb} + {noun} content formula in buttons whenever possible.">
