--- a/src/pages/developing/react-tutorial/step-1.mdx
+++ b/src/pages/developing/react-tutorial/step-1.mdx
@@ -239,10 +239,10 @@ there may be breaking changes in the future.
 
 </InlineNotification>
 
-Next, we're going to create a React component called `TutorialHeader` to use with
-the UI Shell Carbon component. In the `src` directory, create a `components`
-directory and inside of that, a `TutorialHeader` directory. Create the following
-files inside `src/components/TutorialHeader`:
+Next, we're going to create a React component called `TutorialHeader` to use
+with the UI Shell Carbon component. In the `src` directory, create a
+`components` directory and inside of that, a `TutorialHeader` directory. Create
+the following files inside `src/components/TutorialHeader`:
 
 ```bash
 src/components/TutorialHeader
@@ -551,10 +551,10 @@ import RepoPage from './content/RepoPage';
 This allows us to use our page content components and routing components from
 `react-router-dom`.
 
-The next thing we need to do is update what we're returning to `App.js`. We currently
-just have a button in our content. In order to render our pages correctly, we
-need to delete the `Button` component within `Content` (and remove the Button
-import).
+The next thing we need to do is update what we're returning to `App.js`. We
+currently just have a button in our content. In order to render our pages
+correctly, we need to delete the `Button` component within `Content` (and remove
+the Button import).
 
 Now inside `Content` we'll add the following:
 
@@ -663,10 +663,10 @@ over HTTPS.
 <InlineNotification>
 
 **Note:** If you receive a `non-fast-forward` error, it's likely that your
-forked repository is behind the original repository and needs to be updated. This can
-happen if the tutorial was updated after you began working on it. To fix, run
-`git pull upstream react-step-1` to merge the changes into your branch, then you
-can try pushing again. Or, you can
+forked repository is behind the original repository and needs to be updated.
+This can happen if the tutorial was updated after you began working on it. To
+fix, run `git pull upstream react-step-1` to merge the changes into your branch,
+then you can try pushing again. Or, you can
 [manually merge](https://help.github.com/en/articles/syncing-a-fork) in the
 upstream changes.
 
