--- a/src/pages/components/form/usage.mdx
+++ b/src/pages/components/form/usage.mdx
@@ -290,7 +290,8 @@ characters."_
 ### Optional versus required fields
 
 All fields in a form are assumed required, with optional fields being tagged as
-so. It is recommended that an instruction precedes the form stating either "All fields are required" or "All fields are required unless marked optional".
+so. It is recommended that an instruction precedes the form stating either "All
+fields are required" or "All fields are required unless marked optional".
 
 <Row>
 <Column colLg={8}>
