--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -2,14 +2,14 @@
 title: Partners
 description:
   Carbon is not just one team. To sustain productive contribution and maintain a
-  clear direction for Carbon as a whole, various groups works together to
+  clear direction for Carbon as a whole, various groups work together to
   provide direction, governance, and support.
 ---
 
 <PageDescription>
 
 Carbon is not just one team. To sustain productive contribution and maintain a
-clear direction for Carbon as a whole, various groups works together to provide
+clear direction for Carbon as a whole, various groups work together to provide
 direction, governance, and support.
 
 </PageDescription>
